Revising the episodic birth-death process tutorial

--- a/tutorial_TeX/RB_DiversificationRateIntro_Tutorial/RB_DiversificationRateIntro_Tutorial_content_no_bib.tex
+++ b/tutorial_TeX/RB_DiversificationRateIntro_Tutorial/RB_DiversificationRateIntro_Tutorial_content_no_bib.tex
@@ -23,17 +23,18 @@ Admittedly, this classification scheme is somewhat arbitrary, but it is neverthe
 Below, we describe each of the fundamental questions regarding diversification rates.
 
 \paragraph{(1) Diversification-rate through time estimation}\textit{What is the (constant) rate of diversification in my study group?} 
-The most basic models estimate parameters of the stochastic-branching process (\IE rates of speciation and extinction, or composite parameters such as net-diversification and relative-extinction rates) under the assumption that rates have remained constant across lineages and through time; \IE under a constant-rate birth-death stochastic-branching process model.
-Extensions to the (basic) constant-rate models include diversification-rate variation through time.
+The most basic models estimate parameters of the stochastic-branching process (\IE rates of speciation and extinction, or composite parameters such as net-diversification and relative-extinction rates) under the assumption that rates have remained constant across lineages and through time; \IE under a constant-rate birth-death stochastic-branching process model \citep{Nee1994b}.
+Extensions to the (basic) constant-rate models include diversification-rate variation through time \citep{Stadler2011,Hoehna2015a}.
 First, we might ask whether there is evidence of an episodic, tree-wide increase in diversification rates (associated with a sudden increase in speciation rate and/or decrease in extinction rate), as might occur during an episode of adaptive radiation.
-A second question asks whether there is evidence of a continuous/gradual decrease in diversification rates through time (associated with decreasing speciation rates and/or increasing extinction rates), as might occur because of diversity-dependent diversification (\IE where competitive ecological interactions among the species of a growing tree decrease the opportunities for speciation and/or increase the probability of extinction).
-A final question in this category asks whether our study tree was impacted by a mass-extinction event (where a large fraction of the standing species diversity is suddenly lost).
+A second question asks whether there is evidence of a continuous/gradual decrease in diversification rates through time (associated with decreasing speciation rates and/or increasing extinction rates), as might occur because of diversity-dependent diversification (\IE where competitive ecological interactions among the species of a growing tree decrease the opportunities for speciation and/or increase the probability of extinction, \EG \cite{Hoehna2014a}).
+Third, we can ask whether changes in diversification rates are correlated with environmental factors, such as environmental CO\textsubscript{2} or temperature \citep{Condamine2013}.
+A final question in this category asks whether our study tree was impacted by a mass-extinction event (where a large fraction of the standing species diversity is suddenly lost, \EG \cite{May2016}).
 The common theme of these studies is that the diversification process is tree-wide, that is, all lineages of the study group have the exact same rates at a given time.
 
 
 
 \paragraph{(2) Diversification-rate variation across branches estimation}\textit{Is there evidence that diversification rates have varied significantly across the branches of my study group?}
-Models have been developed to detect departures from rate constancy across lineages; these tests are analogous to methods that test for departures from a molecular clock---\IE to assess whether substitution rates vary significantly across lineages.
+Models have been developed to detect departures from rate constancy across lineages; these tests are analogous to methods that test for departures from a molecular clock---\IE to assess whether substitution rates vary significantly across lineages \citep{Alfaro2009,Rabosky2014a}.
 These models are important for assessing whether a given tree violates the assumptions of rate homogeneity among lineages.
 Furthermore, these models are important to answer questions such as:
 \textit{What are the branch-specific diversification rates?}; and
@@ -43,7 +44,7 @@ Furthermore, these models are important to answer questions such as:
 \paragraph{(3) Character-dependent diversification-rate estimation}\textit{Are diversification rates correlated with some variable in my study group?}
 Character-dependent diversification-rate models aim to identify overall correlations between diversification rates and organismal features (binary and multi-state discrete morphological traits, continuous morphological traits, geographic range, etc.).
 For example, one can hypothesize that a binary character, say if an organism is herbivorous/carnivorous or self-compatible/self-incompatible, impact the diversification rates.
-Then, if the organism is in state 0 (\EG is herbivorous) it has a lower (or higher) diversification rate than if the organism is in state 1 (\EG carnivorous).
+Then, if the organism is in state 0 (\EG is herbivorous) it has a lower (or higher) diversification rate than if the organism is in state 1 (\EG carnivorous) \citep{Maddison2007}.
 
 
 \section{Models}\label{sec:Models}
