--- a/tutorial_TeX/refs.bib
+++ b/tutorial_TeX/refs.bib
@@ -1,5 +1,4 @@
-% This file was created with JabRef 2.10.
-% Encoding: Cp1252
+% Encoding: windows-1252
 
 
 @String { AN        = {The American Naturalist} }
@@ -9734,11 +9733,27 @@ They used a simple NNI for rooted trees},
   Timestamp                = {2015.01.19}
 }
 
-@comment{jabref-meta: selector_publisher:}
+@Article{Maddison2007,
+  author    = {Maddison, W.P. and Midford, P.E. and Otto, S.P.},
+  title     = {{Estimating a binary character's effect on speciation and extinction}},
+  journal   = SYSBIO,
+  year      = {2007},
+  volume    = {56},
+  number    = {5},
+  pages     = {701},
+  owner     = {Hoehna},
+  timestamp = {2010.11.06},
+}
 
-@comment{jabref-meta: selector_author:}
+@Article{MagnusonFord2012,
+  author    = {Magnuson-Ford, Karen and Otto, Sarah P},
+  title     = {Linking the investigations of character evolution and species diversification},
+  journal   = {The American Naturalist},
+  year      = {2012},
+  volume    = {180},
+  number    = {2},
+  pages     = {225--245},
+  publisher = {University of Chicago Press Chicago, IL},
+}
 
-@comment{jabref-meta: selector_journal:}
-
-@comment{jabref-meta: selector_keywords:}
-
+@Comment{jabref-meta: databaseType:bibtex;}
